--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "directories": {
       "buildResources": "assets"
     }
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.2.0",
+    "knex": "^3.1.0"
   }
 }
