--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "moduleResolution": "node",
       "esModuleInterop": true,
       "sourceMap": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "types": ["jest"]
     },
     "include": ["src/**/*", "index.ts"]
   }
