--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/joao-lucas-paes/Oculus_label#readme",
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "22.15.9",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^9.1.2",
@@ -57,6 +58,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
-    "knex": "^3.1.0"
+    "knex": "^3.1.0",
+    "lodash.clonedeep": "^4.5.0"
   }
 }
