[STYLE] Improving code and organization - models from arc, now are in domain - interface now is called of dtos (data transfer objects) - now all imports are made with @{name}

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,15 @@
       "esModuleInterop": true,
       "sourceMap": true,
       "skipLibCheck": true,
-      "types": ["jest"]
+      "types": ["jest"],
+      "baseUrl": ".",
+      "paths": {
+        "@domain/*": ["src/domain/*"],
+        "@arc/*": ["src/arc/*"],
+        "@app/*": ["src/app/*"],
+        "@ui/*": ["src/ui/*"],
+        "@const/*": ["src/const/*"],
+      }
     },
     "include": ["src/**/*", "index.ts"]
   }
